# src/Controllers/customer.controller.js
@@ -12,8 +12,8 @@ const register = async (req,res) => {
 
 const login = async (req,res) => {
     try {
-        const token = await customerService.login(req.body);
-        res.status(200).json({token: 'Bearer ' + token})
+        const {customer,token} = await customerService.login(req.body);
+        res.status(200).json({customer,token: 'Bearer ' + token})
     } catch (error) {
         res.status(500).json({error: error.message});
     }
